--- a/lesson4/main.css
+++ b/lesson4/main.css
@@ -72,6 +72,8 @@
   background-image: url("img/1.jpg");
   background-size: cover;
   background-position: right;
+  position: relative;
+  z-index: 0;
   /* background-repeat: no-repeat; */
 }
 .overlay {
@@ -79,6 +81,10 @@
   width: 100%;
   background-color: black;
   opacity: 0.5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .inner-box {
