--- a/lesson10/main.css
+++ b/lesson10/main.css
@@ -4,3 +4,37 @@ h1 {
 h2 {
   color: gold;
 }
+
+/* .blo {
+  display: flex;
+  &__element {
+
+  }
+  &__element2 {
+    &--mod {
+      &:hover {
+
+      }
+    }
+  }
+}
+
+.block {
+  display: flex;
+}
+
+.block__element {
+
+}
+
+.block__element2 {
+
+}
+
+.block__element2--mod {
+
+}
+
+.block__element2--mod:hover {
+
+} */
